refactor(theme): :recycle: 优化主题配置

--- a/src/styles/var.scss
+++ b/src/styles/var.scss
@@ -1,26 +1,3 @@
-// 主题相关变量
+// 统一样式在这里统一管理
 :root {
-  // 主色调，默认使用Element Plus的蓝色
-  --el-color-primary: #409eff;
-  --el-color-primary-dark-2: #337ecc;
-  --el-color-primary-light-1: #53a8ff;
-  --el-color-primary-light-3: #79bbff;
-  --el-color-primary-light-5: #a0cfff;
-  --el-color-primary-light-7: #c6e2ff;
-  --el-color-primary-light-8: #d9ecff;
-  --el-color-primary-light-9: #ecf5ff;
-
-  // 文字颜色
-  --text-color-primary: #303133;
-  --text-color-regular: #606266;
-  --text-color-secondary: #909399;
-
-  // 边框颜色
-  --border-color-base: #dcdfe6;
-  --border-color-light: #e4e7ed;
-  --border-color-lighter: #ebeef5;
-  --border-color-extra-light: #f2f6fc;
-
-  // 背景颜色
-  --background-color-base: #f5f7fa;
 }
