style: 更新暗色模式的背景色和文本颜色变量以优化视觉效果

--- a/src/styles/theme-modes.scss
+++ b/src/styles/theme-modes.scss
@@ -3,6 +3,7 @@
 // 暗色模式
 html.dark {
   --el-bg-color: #141414;
+  --el-bg-color-overlay: #1d1e1f;
   --el-bg-color-page: #000000;
   --el-text-color-primary: #e5eaf3;
   --el-text-color-regular: #cfd3dc;
@@ -12,7 +13,7 @@ html.dark {
   --el-fill-color: #303030; //激活(选中)状态下的背景色
   --el-fill-color-light: #262727; //悬停状态下的背景色
   --el-fill-color-lighter: #1d1d1d; //表格隔行变色状态的背景色
-  --el-fill-color-blank: #1d1e1f;
+  --el-fill-color-blank: #1d1e1f; //默认的背景色
   --el-mask-color: rgba(0, 0, 0, 0.8);
   --el-mask-color-extra-light: rgba(0, 0, 0, 0.3);
 
@@ -20,7 +21,7 @@ html.dark {
   color-scheme: dark; //告诉浏览器当前页面使用暗色方案，这会影响浏览器默认的滚动条、表单控件等原生元素的样式。
   --el-color-white: #ffffff;
   --el-color-black: #000000;
-  --el-color-primary-light-9: #303030 !important;
+  --el-color-primary-light-9: var(--el-fill-color) !important;
 }
 
 // 哀悼模式（黑白模式）
