style: 更新侧边栏和菜单的背景色变量，优化主题样式(暗黑模式)

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,3 @@
 @use './reset';
-@use './theme-modes';
-@use './sidebar-styles';
-@use './element-plus-override';
+// @use './sidebar-styles';
+// @use './element-plus-override';
