style: 更新NavBar组件的Logo文字颜色和菜单悬浮背景色，优化视觉效果 style: 添加.el-tree高亮当前节点的背景色样式

--- a/src/styles/var.scss
+++ b/src/styles/var.scss
@@ -127,3 +127,6 @@ html.dark.color-weak {
     color: var(--sidebar-menu-text) !important;
   }
 }
+.el-tree--highlight-current .el-tree-node.is-current > .el-tree-node__content {
+  background-color: var(--el-fill-color) !important;
+}
